working slack hooks

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+certifi==2019.11.28
 certstream==1.11
+chardet==3.0.4
+idna==2.9
+requests==2.23.0
 six==1.14.0
 termcolor==1.1.0
+urllib3==1.25.8
 websocket-client==0.57.0
