working log file

--- a/config.ini
+++ b/config.ini
@@ -5,11 +5,5 @@ certstream_url = wss://certstream.calidog.io
 
 # slack config
 [slack]
-hook = ''
-
-# pass shodan configuration
-[shoda]
-api_key = ''
-
-
+hook = https://hooks.slack.com/services/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
 
