working scoring and new slack alert style

--- a/blackcert.conf
+++ b/blackcert.conf
@@ -5,5 +5,5 @@ certstream_url = wss://certstream.calidog.io
 
 # slack config
 [slack]
-hook = https://hooks.slack.com/services/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
-
+hook = ''
+alert_score_threshold = 70
