--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ click==7.1.1
 click-plugins==1.1.1
 colorama==0.4.3
 idna==2.9
+python-Levenshtein==0.12.0
+PyYAML==5.3.1
 requests==2.23.0
 six==1.14.0
 termcolor==1.1.0
+tld==0.11.11
 urllib3==1.25.8
 websocket-client==0.57.0
 XlsxWriter==1.2.8
