threshold too high

--- a/blackcert.conf
+++ b/blackcert.conf
@@ -5,5 +5,5 @@ certstream_url = wss://certstream.calidog.io
 
 # slack config
 [slack]
-hook = ''
-alert_score_threshold = 70
+hook = 
+alert_score_threshold = 10
